changed deprecated build() to package(), removed startdir

--- a/phpstorm/PKGBUILD
+++ b/phpstorm/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgname=phpstorm
 _pkgname=PhpStorm  # Directory name in the tar file
-pkgver=6.0.1
-pkgbuild=129.291
+pkgver=6.0.2
+pkgbuild=129.487
 pkgrel=1
 pkgdesc="Lightweight and Smart PHP IDE. 30-day free trial."
 arch=('i686' 'x86_64')
@@ -14,9 +14,9 @@ url="http://www.jetbrains.com/phpstorm/"
 license=('custom')
 depends=('java-runtime>=6')
 source=(http://download-ln.jetbrains.com/webide/PhpStorm-${pkgver}.tar.gz)
-md5sums=('3355fad6d66cc5375791f08fc6b72015')
+md5sums=('20edbdb3f2fb1ae850567d9b9776153b')
 
-build() {
+package() {
   cd ${srcdir}
   mkdir -p ${pkgdir}/opt/${pkgname} || return 1
   cp -R ${srcdir}/${_pkgname}-${pkgbuild}/* ${pkgdir}/opt/${pkgname} || return 1
@@ -42,13 +42,14 @@ Terminal=false
 Type=Application
 Categories=Development
 EOF
-) > ${startdir}/phpstorm.desktop
+) > ${srcdir}/phpstorm.desktop
 
   mkdir -p ${pkgdir}/usr/bin/ || return 1
   mkdir -p ${pkgdir}/usr/share/applications/ || return 1
   mkdir -p ${pkgdir}/usr/share/pixmaps/ || return 1
   mkdir -p ${pkgdir}/usr/share/licenses/${pkgname}/ || return 1
-  install -m 644 ${startdir}/phpstorm.desktop ${pkgdir}/usr/share/applications/
+
+  install -m 644 ${srcdir}/phpstorm.desktop ${pkgdir}/usr/share/applications/
   install -m 644 ${pkgdir}/opt/${pkgname}/bin/webide.png ${pkgdir}/usr/share/pixmaps/phpstorm.png
   install -m 644 ${srcdir}/${_pkgname}-${pkgbuild}/license/${_pkgname}_license.txt ${pkgdir}/usr/share/licenses/${pkgname}/${_pkgname}_license.txt
   ln -s /opt/$pkgname/bin/phpstorm.sh "$pkgdir/usr/bin/phpstorm"
